# oauth-idp-server

./: .env  .gitignore  README.md  main.py  pyproject.toml
static/: client-register.html  index.html  login.html  register.html
